--- a/responsive_design.html
+++ b/responsive_design.html
@@ -7,9 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<!--     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+<!--     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    
+    
     <link rel="stylesheet" href="./css/responsive.css">
     <title>responsive</title>
 </head>
@@ -137,7 +143,7 @@
                     <i class="fa fa-linode fa-3x  text-danger "></i>
                     <h3 class="text-upercase my-3">NODE JS</h3>
                     <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore accusamus quia ullam ducimus harum eius eligendi quos officiis nulla velit.</p>
-                    <a href="#" class="btn btn-outline-danger w-75 btn-block text-uppercase">press here</a>
+                    <a href="#" class="btn btn-outline-danger w-75 btn-block text-uppercase mx-auto">press here</a>
 
                 </div>
                 <!-- end single column -->
@@ -146,7 +152,7 @@
                     <i class="fa fa-css3 fa-3x  text-danger "></i>
                     <h3 class="text-upercase my-3">NODE JS</h3>
                     <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore accusamus quia ullam ducimus harum eius eligendi quos officiis nulla velit.</p>
-                    <a href="#" class="btn btn-outline-danger w-75 btn-block text-uppercase">press here</a>
+                    <a href="#" class="btn btn-outline-danger w-75 btn-block text-uppercase mx-auto">press here</a>
 
                 </div>
                 <!-- end single column -->
@@ -155,7 +161,7 @@
                     <i class="fa fa-html5 fa-3x  text-danger "></i>
                     <h3 class="text-upercase my-3">NODE JS</h3>
                     <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore accusamus quia ullam ducimus harum eius eligendi quos officiis nulla velit.</p>
-                    <a href="#" class="btn btn-outline-danger w-75 btn-block text-uppercase">press here</a>
+                    <a href="#" class="btn btn-outline-danger w-75 btn-block text-uppercase mx-auto">press here</a>
 
                 </div>
                 <!-- end single column -->
@@ -164,7 +170,7 @@
                     <i class="fa fa-jsfiddle fa-3x  text-danger "></i>
                     <h3 class="text-upercase my-3">NODE JS</h3>
                     <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore accusamus quia ullam ducimus harum eius eligendi quos officiis nulla velit.</p>
-                    <a href="#" class="btn btn-outline-danger w-75 btn-block text-uppercase">press here</a>
+                    <a href="#" class="btn btn-outline-danger w-75 btn-block text-uppercase mx-auto">press here</a>
 
                 </div>
                 <!-- end single column -->
